--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="client.jar"/>
+	<classpathentry kind="lib" path="library/gson-2.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
